// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpecReporter getResultDisplay should not print if data table format is not given 1`] = `
Array [
  "Foo test",
  "grey Some important",
  "grey description to read!",
  "",
  "   green ✓ foo",
  "   green ✓ bar",
  "",
]
`;

exports[`SpecReporter getResultDisplay should not print if data table is empty 1`] = `
Array [
  "Foo test",
  "grey Some important",
  "grey description to read!",
  "",
  "   green ✓ foo",
  "   green ✓ bar",
  "",
]
`;

exports[`SpecReporter getResultDisplay should print data tables 1`] = `
Array [
  "Foo test",
  "grey Some important",
  "grey description to read!",
  "",
  "   green ✓ foo",
  "     │ Vegetable │ Rating │",
  "     │ Apricot   │ 5      │",
  "     │ Brocolli  │ 2      │",
  "     │ Cucumber  │ 10     │",
  "   green ✓ bar",
  "",
]
`;

exports[`SpecReporter getResultDisplay should validate the result output with tests 1`] = `
Array [
  "Foo test",
  "   green ✓ foo",
  "   green ✓ bar",
  "",
  "Bar test",
  "   green ✓ some test",
  "   red ✖ a failed test",
  "   red ✖ a failed test with no stack",
  "",
  "Baz test",
  "   green ✓ foo bar baz",
  "   cyan - a skipped test",
  "",
]
`;

exports[`SpecReporter printReport with normal setup should print jobs of all instance when run with multiremote 1`] = `
Array [
  Array [
    "------------------------------------------------------------------
[MultiremoteBrowser (unknown) #0-0] Spec: /foo/bar/baz.js
[MultiremoteBrowser (unknown) #0-0] Running: MultiremoteBrowser on (unknown)
[MultiremoteBrowser (unknown) #0-0]
[MultiremoteBrowser (unknown) #0-0] Foo test
[MultiremoteBrowser (unknown) #0-0]    green ✓ foo
[MultiremoteBrowser (unknown) #0-0]    green ✓ bar
[MultiremoteBrowser (unknown) #0-0]
[MultiremoteBrowser (unknown) #0-0] Bar test
[MultiremoteBrowser (unknown) #0-0]    green ✓ some test
[MultiremoteBrowser (unknown) #0-0]    red ✖ a failed test
[MultiremoteBrowser (unknown) #0-0]    red ✖ a failed test with no stack
[MultiremoteBrowser (unknown) #0-0]
[MultiremoteBrowser (unknown) #0-0] Baz test
[MultiremoteBrowser (unknown) #0-0]    green ✓ foo bar baz
[MultiremoteBrowser (unknown) #0-0]    cyan - a skipped test
[MultiremoteBrowser (unknown) #0-0]
[MultiremoteBrowser (unknown) #0-0] green 4 passing (5s)
[MultiremoteBrowser (unknown) #0-0] red 1 failing
[MultiremoteBrowser (unknown) #0-0] cyan 1 skipped
[MultiremoteBrowser (unknown) #0-0]
[MultiremoteBrowser (unknown) #0-0] 1) Bar test a failed test
[MultiremoteBrowser (unknown) #0-0] red expected foo to equal bar
[MultiremoteBrowser (unknown) #0-0] gray Failed test stack trace
[MultiremoteBrowser (unknown) #0-0]
[MultiremoteBrowser (unknown) #0-0] 2) Bar test a failed test with no stack
[MultiremoteBrowser (unknown) #0-0] red expected foo to equal bar
[MultiremoteBrowser (unknown) #0-0]
[MultiremoteBrowser (unknown) #0-0] Check out browserA job at https://app.saucelabs.com/tests/foobar
[MultiremoteBrowser (unknown) #0-0] Check out browserB job at https://app.saucelabs.com/tests/barfoo
",
  ],
]
`;

exports[`SpecReporter printReport with normal setup should print link to Sauce Labs EU job details page 1`] = `
Array [
  Array [
    "------------------------------------------------------------------
[loremipsum 50 Windows 10 #0-0] Spec: /foo/bar/baz.js
[loremipsum 50 Windows 10 #0-0] Running: loremipsum (v50) on Windows 10
[loremipsum 50 Windows 10 #0-0] Session ID: foobar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Foo test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo
[loremipsum 50 Windows 10 #0-0]    green ✓ bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Bar test
[loremipsum 50 Windows 10 #0-0]    green ✓ some test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test with no stack
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Baz test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo bar baz
[loremipsum 50 Windows 10 #0-0]    cyan - a skipped test
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] green 4 passing (5s)
[loremipsum 50 Windows 10 #0-0] red 1 failing
[loremipsum 50 Windows 10 #0-0] cyan 1 skipped
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 1) Bar test a failed test
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0] gray Failed test stack trace
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 2) Bar test a failed test with no stack
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Check out job at https://app.eu-central-1.saucelabs.com/tests/ba86cbcb70774ef8a0757c1702c3bdf9
",
  ],
]
`;

exports[`SpecReporter printReport with normal setup should print link to Sauce Labs EU job details page 2`] = `
Array [
  Array [
    "------------------------------------------------------------------
[loremipsum 50 Windows 10 #0-0] Spec: /foo/bar/baz.js
[loremipsum 50 Windows 10 #0-0] Running: loremipsum (v50) on Windows 10
[loremipsum 50 Windows 10 #0-0] Session ID: foobar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Foo test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo
[loremipsum 50 Windows 10 #0-0]    green ✓ bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Bar test
[loremipsum 50 Windows 10 #0-0]    green ✓ some test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test with no stack
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Baz test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo bar baz
[loremipsum 50 Windows 10 #0-0]    cyan - a skipped test
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] green 4 passing (5s)
[loremipsum 50 Windows 10 #0-0] red 1 failing
[loremipsum 50 Windows 10 #0-0] cyan 1 skipped
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 1) Bar test a failed test
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0] gray Failed test stack trace
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 2) Bar test a failed test with no stack
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Check out job at https://app.eu-central-1.saucelabs.com/tests/ba86cbcb70774ef8a0757c1702c3bdf9
",
  ],
]
`;

exports[`SpecReporter printReport with normal setup should print link to Sauce Labs EU job details page 3`] = `
Array [
  Array [
    "------------------------------------------------------------------
[loremipsum 50 Windows 10 #0-0] Spec: /foo/bar/baz.js
[loremipsum 50 Windows 10 #0-0] Running: loremipsum (v50) on Windows 10
[loremipsum 50 Windows 10 #0-0] Session ID: foobar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Foo test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo
[loremipsum 50 Windows 10 #0-0]    green ✓ bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Bar test
[loremipsum 50 Windows 10 #0-0]    green ✓ some test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test with no stack
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Baz test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo bar baz
[loremipsum 50 Windows 10 #0-0]    cyan - a skipped test
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] green 4 passing (5s)
[loremipsum 50 Windows 10 #0-0] red 1 failing
[loremipsum 50 Windows 10 #0-0] cyan 1 skipped
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 1) Bar test a failed test
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0] gray Failed test stack trace
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 2) Bar test a failed test with no stack
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Check out job at https://app.eu-central-1.saucelabs.com/tests/ba86cbcb70774ef8a0757c1702c3bdf9
",
  ],
  Array [
    "------------------------------------------------------------------
[loremipsum 50 Windows 10 #0-0] Spec: /foo/bar/baz.js
[loremipsum 50 Windows 10 #0-0] Running: loremipsum (v50) on Windows 10
[loremipsum 50 Windows 10 #0-0] Session ID: foobar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Foo test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo
[loremipsum 50 Windows 10 #0-0]    green ✓ bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Bar test
[loremipsum 50 Windows 10 #0-0]    green ✓ some test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test with no stack
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Baz test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo bar baz
[loremipsum 50 Windows 10 #0-0]    cyan - a skipped test
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] green 4 passing (5s)
[loremipsum 50 Windows 10 #0-0] red 1 failing
[loremipsum 50 Windows 10 #0-0] cyan 1 skipped
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 1) Bar test a failed test
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0] gray Failed test stack trace
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 2) Bar test a failed test with no stack
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Check out job at https://app.us-east-1.saucelabs.com/tests/ba86cbcb70774ef8a0757c1702c3bdf9
",
  ],
]
`;

exports[`SpecReporter printReport with normal setup should print link to Sauce Labs job details page 1`] = `
Array [
  Array [
    "------------------------------------------------------------------
[loremipsum 50 Windows 10 #0-0] Spec: /foo/bar/baz.js
[loremipsum 50 Windows 10 #0-0] Running: loremipsum (v50) on Windows 10
[loremipsum 50 Windows 10 #0-0] Session ID: foobar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Foo test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo
[loremipsum 50 Windows 10 #0-0]    green ✓ bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Bar test
[loremipsum 50 Windows 10 #0-0]    green ✓ some test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test with no stack
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Baz test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo bar baz
[loremipsum 50 Windows 10 #0-0]    cyan - a skipped test
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] green 4 passing (5s)
[loremipsum 50 Windows 10 #0-0] red 1 failing
[loremipsum 50 Windows 10 #0-0] cyan 1 skipped
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 1) Bar test a failed test
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0] gray Failed test stack trace
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 2) Bar test a failed test with no stack
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Check out job at https://app.saucelabs.com/tests/ba86cbcb70774ef8a0757c1702c3bdf9
",
  ],
]
`;

exports[`SpecReporter printReport with normal setup should print link to Sauce Labs job details page if run with Sauce Connect (jsonwp) 1`] = `
Array [
  Array [
    "------------------------------------------------------------------
[loremipsum 50 Windows 10 #0-0] Spec: /foo/bar/baz.js
[loremipsum 50 Windows 10 #0-0] Running: loremipsum (v50) on Windows 10
[loremipsum 50 Windows 10 #0-0] Session ID: foobar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Foo test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo
[loremipsum 50 Windows 10 #0-0]    green ✓ bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Bar test
[loremipsum 50 Windows 10 #0-0]    green ✓ some test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test with no stack
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Baz test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo bar baz
[loremipsum 50 Windows 10 #0-0]    cyan - a skipped test
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] green 4 passing (5s)
[loremipsum 50 Windows 10 #0-0] red 1 failing
[loremipsum 50 Windows 10 #0-0] cyan 1 skipped
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 1) Bar test a failed test
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0] gray Failed test stack trace
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 2) Bar test a failed test with no stack
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Check out job at https://app.saucelabs.com/tests/ba86cbcb70774ef8a0757c1702c3bdf9
",
  ],
]
`;

exports[`SpecReporter printReport with normal setup should print link to Sauce Labs job details page if run with Sauce Connect (w3c) 1`] = `
Array [
  Array [
    "------------------------------------------------------------------
[loremipsum 50 Windows 10 #0-0] Spec: /foo/bar/baz.js
[loremipsum 50 Windows 10 #0-0] Running: loremipsum (v50) on Windows 10
[loremipsum 50 Windows 10 #0-0] Session ID: foobar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Foo test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo
[loremipsum 50 Windows 10 #0-0]    green ✓ bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Bar test
[loremipsum 50 Windows 10 #0-0]    green ✓ some test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test with no stack
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Baz test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo bar baz
[loremipsum 50 Windows 10 #0-0]    cyan - a skipped test
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] green 4 passing (5s)
[loremipsum 50 Windows 10 #0-0] red 1 failing
[loremipsum 50 Windows 10 #0-0] cyan 1 skipped
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 1) Bar test a failed test
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0] gray Failed test stack trace
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 2) Bar test a failed test with no stack
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Check out job at https://app.saucelabs.com/tests/ba86cbcb70774ef8a0757c1702c3bdf9
",
  ],
]
`;

exports[`SpecReporter printReport with normal setup should print the report to the console 1`] = `
Array [
  Array [
    "------------------------------------------------------------------
[loremipsum 50 Windows 10 #0-0] Spec: /foo/bar/baz.js
[loremipsum 50 Windows 10 #0-0] Running: loremipsum (v50) on Windows 10
[loremipsum 50 Windows 10 #0-0] Session ID: foobar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Foo test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo
[loremipsum 50 Windows 10 #0-0]    green ✓ bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Bar test
[loremipsum 50 Windows 10 #0-0]    green ✓ some test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test with no stack
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Baz test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo bar baz
[loremipsum 50 Windows 10 #0-0]    cyan - a skipped test
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] green 4 passing (5s)
[loremipsum 50 Windows 10 #0-0] red 1 failing
[loremipsum 50 Windows 10 #0-0] cyan 1 skipped
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 1) Bar test a failed test
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0] gray Failed test stack trace
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 2) Bar test a failed test with no stack
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
",
  ],
]
`;
